# nusapitch

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt  start_app.bat
app/: streamlit_app.py
docs/: BUILD_TASKS.md
sample_leads/: sample_leads.csv
sample_profiles/: example_business_profile.json
src/nusapitch/: __init__.py  ai.py  backups.py  db.py  email_client.py  imports.py  paths.py  privacy.py  profiles.py  queue.py  replies.py  research.py  setup_advisor.py  setup_validation.py  suppression.py
tests/: test_ai.py  test_backups.py  test_db_migrations.py  test_email_client.py  test_imports.py  test_paths.py  test_profiles.py  test_queue_limits.py  test_replies.py  test_setup_advisor.py  test_setup_validation.py  test_smtp_send.py  test_suppression.py
