[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nusapitch"
version = "0.1.0"
description = "Local AI cold email writer and sender for B2B outreach."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NusaPitch contributors" }]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "openpyxl>=3.1.5",
  "pandas>=2.2.2",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "streamlit>=1.37.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
